tests/decompile-test/errors/bad_variable_declarations.ts
// @case: binding pattern
{
    let { length } = "hello";
}

// @case: no initializer
let x: number;